--- a/StreamingMovie.Web/Views/Admin/Index.cshtml
+++ b/StreamingMovie.Web/Views/Admin/Index.cshtml
@@ -118,9 +118,9 @@
                 </p>
               </div>
               <div class="flex-auto p-4">
-                <div>
-                  <canvas id="chart-line" height="300"></canvas>
-                </div>
+
+                    <canvas id="chart-line11" height="200"></canvas>
+                
               </div>
             </div>
           </div>
