--- a/StreamingMovie.Web/Views/ActorAdmin/ActorList.cshtml
+++ b/StreamingMovie.Web/Views/ActorAdmin/ActorList.cshtml
@@ -10,10 +10,10 @@
         <div class="flex-none w-full max-w-full px-3">
             <div class="relative flex flex-col min-w-0 mb-6 break-words bg-white border-0 border-transparent border-solid shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
                 <div class="p-6 pb-0 mb-0 border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
-                    <h6 class="dark:text-white">Authors table</h6>
+                    <h6 class="dark:text-white">Actors table</h6>
                 </div>
-                <div style="">
-                    <a class="inline-block px-5 py-2.5 mb-0 font-bold text-center uppercase align-middle transition-all bg-transparent border-0 rounded-lg shadow-none leading-normal text-sm ease-in bg-150 tracking-tight-rem bg-x-25 text-slate-400" asp-action="AddActor" asp-controller="ActorAdmin">
+                <div style="margin-left: 20px">
+                    <a class="bg-gradient-to-tl from-emerald-500 to-teal-400 px-2.5 text-xs rounded-1.8 py-1.4 inline-block whitespace-nowrap text-center align-baseline font-bold uppercase leading-none text-white" asp-action="AddActor" asp-controller="ActorAdmin">
 						<i class="text-xs leading-tight fa fa-plus dark:text-white dark:opacity-60"></i> Add Actor
 					</a>
                 </div>
