--- a/StreamingMovie.Web/Views/ActorAdmin/AddDirector.cshtml
+++ b/StreamingMovie.Web/Views/ActorAdmin/AddDirector.cshtml
@@ -183,14 +183,14 @@
     <div class="main-content">
         <div class="container">
             <div class="header-title">
-                <h1><i class="fas fa-user-plus me-2"></i>Add New Actor</h1>
+                <h1><i class="fas fa-user-plus me-2"></i>Add New Director</h1>
             </div>
 
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-10">
                     <div class="card">
                         <div class="card-header">
-                            <h3><i class="fas fa-edit me-2"></i>Actor Information</h3>
+                            <h3><i class="fas fa-edit me-2"></i>Director Information</h3>
                         </div>
                         <div class="card-body p-4">
                             <form asp-action="AddDirector" asp-controller="ActorAdmin" enctype="multipart/form-data" method="post">
