--- a/StreamingMovie.Web/Views/ActorAdmin/CategoryList.cshtml
+++ b/StreamingMovie.Web/Views/ActorAdmin/CategoryList.cshtml
@@ -12,8 +12,8 @@
                 <div class="p-6 pb-0 mb-0 border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
                     <h6 class="dark:text-white">Authors table</h6>
                 </div>
-                <div style="">
-                    <a class="inline-block px-5 py-2.5 mb-0 font-bold text-center uppercase align-middle transition-all bg-transparent border-0 rounded-lg shadow-none leading-normal text-sm ease-in bg-150 tracking-tight-rem bg-x-25 text-slate-400" asp-action="AddCategory" asp-controller="ActorAdmin">
+                <div style="margin-left: 20px">
+                    <a class="bg-gradient-to-tl from-emerald-500 to-teal-400 px-2.5 text-xs rounded-1.8 py-1.4 inline-block whitespace-nowrap text-center align-baseline font-bold uppercase leading-none text-white" asp-action="AddCategory" asp-controller="ActorAdmin">
                         <i class="text-xs leading-tight fa fa-plus dark:text-white dark:opacity-60"></i> Add Category
                     </a>
                 </div>
