--- a/StreamingMovie.Web/Views/Admin/Index.cshtml
+++ b/StreamingMovie.Web/Views/Admin/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     Layout = "_AdminLayout";
 }
+
+@using StreamingMovie.Web.Views.Admin.ViewModels ;
+@model AdminDTO;
 <div class="w-full px-6 py-6 mx-auto">
         <!-- row 1 -->
         <div class="flex flex-wrap -mx-3">
@@ -12,7 +15,7 @@
                   <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
                       <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Today's Money</p>
-                      <h5 class="mb-2 font-bold dark:text-white">$53,000</h5>
+                      <h5 class="mb-2 font-bold dark:text-white">$@Model.TotalRevenue.ToString("N0")</h5>
                       <p class="mb-0 dark:text-white dark:opacity-60">
                         <span class="text-sm font-bold leading-normal text-emerald-500">+55%</span>
                         since yesterday
@@ -37,7 +40,7 @@
                   <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
                       <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Today's Users</p>
-                      <h5 class="mb-2 font-bold dark:text-white">2,300</h5>
+                      <h5 class="mb-2 font-bold dark:text-white">@Model.TotalUser</h5>
                       <p class="mb-0 dark:text-white dark:opacity-60">
                         <span class="text-sm font-bold leading-normal text-emerald-500">+3%</span>
                         since last week
@@ -61,8 +64,8 @@
                 <div class="flex flex-row -mx-3">
                   <div class="flex-none w-2/3 max-w-full px-3">
                     <div>
-                      <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">New Clients</p>
-                      <h5 class="mb-2 font-bold dark:text-white">+3,462</h5>
+                      <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Total Movies</p>
+                      <h5 class="mb-2 font-bold dark:text-white">@Model.TotalMovie</h5>
                       <p class="mb-0 dark:text-white dark:opacity-60">
                         <span class="text-sm font-bold leading-normal text-red-600">-2%</span>
                         since last quarter
