--- a/StreamingMovie.Web/wwwroot/css/style.css
+++ b/StreamingMovie.Web/wwwroot/css/style.css
@@ -2593,7 +2593,7 @@ img {
 }
 
 .dropdown-menu {
-    background-color: #0b122a !important;
+    background-color: #15152e !important;
     color: #fff !important;
     padding: 0.5rem 0;
     min-width: 120px;
