--- a/StreamingMovie.Web/Views/Movie/Components/Comment/Default.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Components/Comment/Default.cshtml
@@ -68,8 +68,8 @@
                     @comment.Content
                 </p>
             </div>
-             <button class="text-white small btn btn-link mt-1" style="margin-left: 90px;" onclick="toggleComponent('commentForm-@comment.Id')">       
-                 <i class="bi bi-reply-fill"></i> Reply
+              <button class="text-white small btn btn-link" style="margin-left: 80px;"  onclick="toggleComponent('commentForm-@comment.Id')">
+                  <i class="bi bi-reply-fill"></i> Reply
              </button>
         </div>
         <div style="width: 90%; margin-left: auto;">
