--- a/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
+++ b/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
@@ -10,7 +10,7 @@
     </div>
     <form id="commentForm" action="javascript:void(0);">
         <textarea id="messageInput" placeholder="Your Comment"></textarea>
-        <button type="submit"><i class="fa fa-location-arrow"></i> Review</button>
+        <button type="submit"><i class="fa fa-location-arrow"></i> Comment</button>
     </form>
 </div>
 
