--- a/StreamingMovie.Web/Views/Movie/Components/ChildComment/Default.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Components/ChildComment/Default.cshtml
@@ -8,7 +8,7 @@
 }
 
 <style>
-    .anime__details__form{
+    .child-comment-form {
         display: none;
     }
 </style>
@@ -27,7 +27,7 @@
         return $"{(int)diff.TotalDays} day(s) ago";
     }
 }
-<div class="anime__details__form mb-5" id="commentForm-@parentId">
+<div class="anime__details__form child-comment-form mb-5" id="commentForm-@parentId">
     @* <form id="childCommentForm-@parentId" action="javascript:void(0);"> *@
     <form id="childCommentForm-@parentId" asp-action="Create" asp-controller="Comment">
         <textarea id="messageInput-@parentId" name="Content" placeholder="Your Reply Comment"></textarea>
